@@ -46,7 +46,7 @@ $config = array
 	'app_dir' => $rootDir . '/core/install',
 	'lang_dir' => $rootDir . '/core/shared/languages',
 	'app_plug_dir' => $rootDir . '/plugins',
-	'sparkplug_dir' => $rootDir . '/sparkplug/sparkplug',
+	'sparkplug_dir' => $rootDir . '/sparkplug',
 	'charset' => 'UTF-8',
 	'default_controller' => 'install',
 	'session' => array
