@@ -11,7 +11,7 @@
             <et:design:snippet name="article" />
             <et:design:snippet name="sidebar_articles" />
          </div>
-         <div style="clear:both"></div>
+         <div style="clear:both;"></div>
       </div>
       <div id="footer-wrapper">
          <div id="footer">
