@@ -14,7 +14,7 @@
             <h3><et:error_status /></h3>
             <h4><et:error_message /></h4>
          </div>
-         <div style="clear:both"></div>
+         <div style="clear:both;"></div>
       </div>
       <div id="footer-wrapper">
          <div id="footer">
